// Original file: proto/sushi.proto

import type { SushiLiquidity as _com_manifoldfinance_protobuf_sushiswap_SushiLiquidity, SushiLiquidity__Output as _com_manifoldfinance_protobuf_sushiswap_SushiLiquidity__Output } from '../../../../com/manifoldfinance/protobuf/sushiswap/SushiLiquidity';

export interface BlockSushiLiquidity {
  'blockNumber'?: (string);
  'liquidity'?: (_com_manifoldfinance_protobuf_sushiswap_SushiLiquidity)[];
}

export interface BlockSushiLiquidity__Output {
  'blockNumber': (string);
  'liquidity': (_com_manifoldfinance_protobuf_sushiswap_SushiLiquidity__Output)[];
}
